--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
     <!-- Style CSS Link -->
     <link rel="stylesheet" href="./css/style.css">
+
+    <!-- Icon -->
+    <link rel="icon" href="./img/icon_CSS.png" type="image/png">
     
 </head>
 <body>
