--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 
     <!-- Header -->
     <header>
-        <h1>Header</h1>
+        <div class="title-header">
+            <h1>Header</h1>
+        </div>
     </header>
 
     <!-- Content Page -->
@@ -53,7 +55,9 @@
         </div>
     </main>
     <footer>
-        <p>Made with &hearts; by ...</p>
+        <div class="sign-footer">
+            <p>Made with &hearts; by ...</p>
+        </div>
     </footer>
 </body>
 </html>
