HTML and CSS Class Update

--- a/index.html
+++ b/index.html
@@ -17,15 +17,12 @@
 <body>
 
     <!-- Header -->
-    <header>
-        <div class="title-header">
+    <header class="title-header">
             <h1>Header</h1>
-        </div>
     </header>
 
     <!-- Content Page -->
-    <main>
-        <div class="content-cards">
+    <main class="content-cards">
             
             <!-- First Card -->
             <div class="text-card">
@@ -52,12 +49,9 @@
                 <h2>Pinco Pallo</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus magnam itaque illum natus quibusdam, necessitatibus doloremque hic, at velit ducimus dolore, dolorum laboriosam reiciendis accusamus. Nam est dolorem saepe similique!</p>
             </div>
-        </div>
     </main>
-    <footer>
-        <div class="sign-footer">
+    <footer class="sign-footer">
             <p>Made with &hearts; by ...</p>
-        </div>
     </footer>
 </body>
 </html>
